RESOLVED FIXED76747
[GTK] Scrollbars do not respect the has-backward-stepper and has-forward-stepper properties
https://bugs.webkit.org/show_bug.cgi?id=76747
Summary [GTK] Scrollbars do not respect the has-backward-stepper and has-forward-step...
Martin Robinson
Reported 2012-01-20 15:11:01 PST
Ths is particularly noticeable in the most recent version of Adwaita, which doesn't have scrollbars steppers. All WebCore rendered scrollbars have steppers when they shouldn't.
Attachments
Patch (7.89 KB, patch)
2012-01-20 15:15 PST, Martin Robinson
no flags
Martin Robinson
Comment 1 2012-01-20 15:15:00 PST
Carlos Garcia Campos
Comment 2 2012-01-22 23:59:15 PST
Comment on attachment 123389 [details] Patch I think this is not a bug, but a feature! I like the steppers :-D Patch looks good to me. Thanks!
Gustavo Noronha (kov)
Comment 3 2012-01-23 09:21:52 PST
Comment on attachment 123389 [details] Patch Looks good to me as well =)
WebKit Review Bot
Comment 4 2012-01-23 16:54:20 PST
Comment on attachment 123389 [details] Patch Clearing flags on attachment: 123389 Committed r105660: <http://trac.webkit.org/changeset/105660>
WebKit Review Bot
Comment 5 2012-01-23 16:54:24 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.