[GTK] Scrollbars do not respect the has-backward-stepper and has-forward-stepper properties https://bugs.webkit.org/show_bug.cgi?id=76747

Patch by Martin Robinson <mrobinson@igalia.com> on 2012-01-23
Reviewed by Gustavo Noronha Silva.

No new tests. Regressions are covered by existing tests, but testing
different GTK+ theme configurations is not possible yet.

* platform/gtk/ScrollbarThemeGtk.cpp:
(WebCore::ScrollbarThemeGtk::backButtonRect): If there is no back stepper, return an empty rect.
(WebCore::ScrollbarThemeGtk::forwardButtonRect): If there is no forward stepper, return an empty rect.
(WebCore::ScrollbarThemeGtk::trackRect): Adjust track rect calculation to account for when there is
no steppers.
* platform/gtk/ScrollbarThemeGtk.h: New members describing whether there are primary steppers.
* platform/gtk/ScrollbarThemeGtk2.cpp:
(WebCore::ScrollbarThemeGtk::updateThemeProperties): Look at the theme to determine if there
are primary foward and back steppers.
* platform/gtk/ScrollbarThemeGtk3.cpp:
(WebCore::ScrollbarThemeGtk::updateThemeProperties): Ditto.

Canonical link: https://commits.webkit.org/93694@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105660 268f45cc-cd09-0410-ab3c-d52691b4dbfc